--- a/index.css
+++ b/index.css
@@ -35,6 +35,10 @@ p {
     color: lightgray;
 }
 
+.pwd:focus {
+    outline: none;
+}
+
 .statusContainer {
     width: 100%;
     padding: 30px 25px;
@@ -47,6 +51,9 @@ p {
     margin-bottom: 30px;
     background-color: black;
     opacity: 0.6;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
 }
 
 .pwdLength {
@@ -143,4 +150,13 @@ span {
 
 .right {
     margin-right: 6px;
+}
+
+.roundedBar {
+    width: 30px;
+    height: 30px;
+    background-color: black;
+    border: 3px solid lightgreen;
+    cursor: pointer;
+    border-radius: 50%;
 }
