--- a/index.css
+++ b/index.css
@@ -5,11 +5,11 @@
 }
 
 body {
-    background-color: black;
+    background-color: white;
 }
 
 .mainContainer {
-    width: 500px;
+    /* width: 500px; */
     margin: 140px auto;
 }
 
@@ -20,19 +20,26 @@ p {
 .header {
     text-align: center;
     margin-bottom: 25px;
-    font-size: 22px;
-    color: lightgray;
+    font-size: 25px;
+    color: black;
+    font-weight: bold;
+    opacity: 0.6;
+}
+
+.pwdContainer {
+    background-color: #6528F7;
+    opacity: 0.8;
 }
 
 .pwd {
     display: block;
     width: 100%;
     padding: 20px;
-    background-color: gray;
+    background-color: #6528F7;
     font-size: 35px;
     font-weight: bold;
     border: none;
-    color: lightgray;
+    color: white;
 }
 
 .pwd:focus {
@@ -42,14 +49,15 @@ p {
 .statusContainer {
     width: 100%;
     padding: 30px 25px;
-    background-color: gray;
+    background-color: #6528F7;
+    opacity: 0.8;
 }
 
 .characterLengthBar {
     width: 100%;
     height: 6px;
     margin-bottom: 30px;
-    background-color: black;
+    background-color: white;
     opacity: 0.6;
     display: flex;
     flex-direction: row;
@@ -57,14 +65,14 @@ p {
 }
 
 .pwdLength {
-    color: lightgreen;
+    color: white;
     font-size: 28px;
     font-weight: bold;
 }
 
 .pwdContainer {
     padding: 15px 5px;
-    background-color: gray;
+    background-color: #6528F7;
     margin-bottom: 15px;
 }
 
@@ -95,8 +103,8 @@ p {
     align-items: center;
     padding: 22px;
     margin-bottom: 30px;
-    background-color: black;
-    opacity: 0.6;
+    background-color: #763bfd;
+    opacity: 1;
 }
 
 .generateBtn {
@@ -104,12 +112,12 @@ p {
     width: 100%;
     padding: 15px 0px;
     text-align: center;
-    color: lightgreen;
-    border: 2px solid lightgreen;
+    color: white;
     cursor: pointer;
-    background-color: gray;
+    background-color: black;
     font-size: 17px;
     font-weight: bold;
+    opacity: 0.6;
 }
 
 input {
@@ -126,6 +134,8 @@ span {
 
 .strengthText {
     font-size: 14px;
+    color: white;
+    font-weight: bold;
 }
 
 .pwdStrengthStatus {
@@ -155,8 +165,21 @@ span {
 .roundedBar {
     width: 30px;
     height: 30px;
-    background-color: black;
-    border: 3px solid lightgreen;
+    background-color: white;
+    border: 3px solid ;
     cursor: pointer;
     border-radius: 50%;
 }
+
+@media only screen and (max-width: 500px) {
+    .mainContainer {
+        width: 100%;
+    }
+}
+
+@media only screen and (min-width: 501px) {
+    .mainContainer {
+        width: 500px;
+    }
+}
+  
